# ability_map

./: .~lock.project_notes.odt#  Ability_Mapping.odt  README.md  project_notes.odt
roslisp_setup/devel/: .catkin  .rosinstall  local_setup.sh
roslisp_setup/devel/include/roslisp_tutorials_turtles/: move.h  moveRequest.h  moveResponse.h  turn.h  turnRequest.h  turnResponse.h  velocity.h
roslisp_setup/devel/lib/pkgconfig/: roslisp_tutorials_turtles.pc
roslisp_setup/devel/lib/python3/dist-packages/roslisp_tutorials_turtles/msg/: _velocity.py
roslisp_setup/devel/lib/python3/dist-packages/roslisp_tutorials_turtles/srv/: __init__.py  _move.py  _turn.py
roslisp_setup/devel/lib/roslisp_tutorials_turtles/: move  navigaition  turn
roslisp_setup/devel/share/roseus/ros/roslisp_tutorials_turtles/: manifest.l
roslisp_setup/devel/share/roslisp_tutorials_turtles/cmake/: roslisp_tutorials_turtles-msg-paths.cmake  roslisp_tutorials_turtlesConfig.cmake
roslisp_setup/src/roslisp_tutorials_turtles/: CMakeLists.txt  package.xml
roslisp_setup/src/roslisp_tutorials_turtles/config/: param.yaml
roslisp_setup/src/roslisp_tutorials_turtles/launch/: turtle_circle.launch
roslisp_setup/src/roslisp_tutorials_turtles/msg/: velocity.msg
roslisp_setup/src/roslisp_tutorials_turtles/nodes/: navigaition
roslisp_setup/src/roslisp_tutorials_turtles/src/: turtles-system.asd
roslisp_setup/src/roslisp_tutorials_turtles/src/turtles/: package.lisp  turtles-core.lisp
roslisp_setup/src/roslisp_tutorials_turtles/srv/: move.srv
(+17 files in other folders)
